// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanActions should render a loader when trigger an action 1`] = `
<LoanActions
  actionLoading={true}
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;

exports[`LoanActions should render an List.Item for each available action 1`] = `
<LoanActions
  actions={Object {}}
  availableActions={
    Object {
      "action": "url",
      "anotheraction": "another-url",
    }
  }
  data={
    Object {
      "title": "A title",
    }
  }
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;

exports[`LoanActions should render initial state and check props 1`] = `
<LoanActions
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;
